--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
@@ -21,8 +22,10 @@
     "react-native": "0.75.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.5.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react_native_mqtt": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
